# Changelog
Summary of notable changes and features

## Unreleased (dev)
### Refactor
 - input module complete rewrite
   - generic word completion API
   - add full test coverage
   - performance and memory usage improvements
### Fixes
 - fix error in sending PING
 - fix error messages on socket disconnect
 - close/cleanup servers on :quit

## [0.1.0]
### Initial release
Started in 2013 as a hobby project, rirc has been a fully useable,
albeit basic, IRC client since it's early inception. This version
marks an initial release supporting a basic subset of the IRC
protocol and client management features one would expect in everyday
usage.