@@ -21,6 +21,7 @@ struct server
 	} nicks;
 	struct channel *channel;
 	struct channel_list clist;
+	struct channel_list ulist; // TODO: seperate privmsg
 	struct mode usermodes;
 	struct mode_str mode_str;
 	struct mode_cfg mode_cfg;
@@ -48,7 +49,7 @@ struct server* server(
 
 struct server* server_list_add(struct server_list*, struct server*);
 struct server* server_list_del(struct server_list*, struct server*);
-struct server* server_list_get(struct server_list*, const char *, const char*);
+struct server* server_list_get(struct server_list*, const char*, const char*);
 
 void server_set_004(struct server*, char*);
 void server_set_005(struct server*, char*);
