@@ -13,14 +13,13 @@
 #define arg_error(...) \
 	do { fprintf(stderr, "%s: ", runtime_name); \
 	     fprintf(stderr, __VA_ARGS__); \
-	     fprintf(stderr, "\n"); \
-	     fprintf(stderr, "%s --help for usage\n", runtime_name); \
-	     exit(EXIT_FAILURE); \
+	     fprintf(stderr, "\n%s --help for usage\n", runtime_name); \
+	     return 1; \
 	} while (0)
 
 static const char* opt_arg_str(char);
 static const char* getpwuid_pw_name(void);
-static void parse_args(int, char**);
+static int parse_args(int, char**);
 
 #ifndef DEBUG
 const char *runtime_name = "rirc";
@@ -103,7 +102,7 @@ getpwuid_pw_name(void)
 	return passwd->pw_name;
 }
 
-static void
+static int
 parse_args(int argc, char **argv)
 {
 	int opt_c = 0,
@@ -126,8 +125,8 @@ parse_args(int argc, char **argv)
 		{"chans",    required_argument, 0, 'c'},
 		{"username", required_argument, 0, 'u'},
 		{"realname", required_argument, 0, 'r'},
-		{"version",  no_argument,       0, 'v'},
 		{"help",     no_argument,       0, 'h'},
+		{"version",  no_argument,       0, 'v'},
 		{0, 0, 0, 0}
 	};
 
@@ -143,7 +142,7 @@ parse_args(int argc, char **argv)
 	} cli_servers[IO_MAX_CONNECTIONS];
 
 	/* FIXME: getopt_long is a GNU extension */
-	while (0 < (opt_c = getopt_long(argc, argv, ":s:p:w:n:c:r:u:vh", long_opts, &opt_i))) {
+	while (0 < (opt_c = getopt_long(argc, argv, ":s:p:w:n:c:r:u:hv", long_opts, &opt_i))) {
 
 		switch (opt_c) {
 
@@ -202,12 +201,12 @@ parse_args(int argc, char **argv)
 
 			#undef CHECK_SERVER_OPTARG
 
-			case 'v':
-				puts(rirc_version);
-				exit(EXIT_SUCCESS);
-
 			case 'h':
 				puts(rirc_usage);
+				exit(EXIT_SUCCESS);
+
+			case 'v':
+				puts(rirc_version);
 				exit(EXIT_SUCCESS);
 
 			case '?':
@@ -263,11 +262,19 @@ parse_args(int argc, char **argv)
 
 	for (size_t i = 0; i < n_servers; i++)
 		io_cx(cli_servers[i].s->connection);
+
+	return 0;
 }
 
 int
 main(int argc, char **argv)
 {
-	parse_args(argc, argv);
-	io_loop();
+	int ret;
+
+	if ((ret = parse_args(argc, argv)) == 0)
+		io_init();
+
+	state_term();
+
+	return ret;
 }
